test/arrays/ferguson/semantic-examples/0-call-modifies-returned-record.good
0-call-modifies-returned-record.chpl:23: error: non-lvalue actual is passed to 'ref' formal 'r' of setToTwo()
